[gd_scene load_steps=2 format=3 uid="uid://b7xqm3pk2whe"]

[ext_resource type="Script" path="res://scripts/WrongMatchPOC.gd" id="1_wrong_script"]

[node name="WrongMatchPOC" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wrong_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Wrong Match Animation POC"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Back to Menu"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="WrongMatchSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="WrongMatchTitle" type="Label" parent="MarginContainer/VBoxContainer/WrongMatchSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Wrong Match Animations"

[node name="WrongMatchButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer/WrongMatchSection"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="ShakeRedFlash" type="Button" parent="MarginContainer/VBoxContainer/WrongMatchSection/WrongMatchButtons"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Shake + Red Flash"

[node name="BounceBack" type="Button" parent="MarginContainer/VBoxContainer/WrongMatchSection/WrongMatchButtons"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Bounce Back"

[node name="WobbleDim" type="Button" parent="MarginContainer/VBoxContainer/WrongMatchSection/WrongMatchButtons"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Wobble + Dim"

[node name="ElectricSpark" type="Button" parent="MarginContainer/VBoxContainer/WrongMatchSection/WrongMatchButtons"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Electric Spark"

[node name="DemoArea" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="DemoPanel" type="Panel" parent="MarginContainer/VBoxContainer/DemoArea"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2

[node name="Background" type="ColorRect" parent="MarginContainer/VBoxContainer/DemoArea/DemoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 0.3, 0.35, 1)

[node name="DemoCard" type="TextureRect" parent="MarginContainer/VBoxContainer/DemoArea/DemoPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -100.0
offset_right = 75.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(75, 100)
expand_mode = 1
stretch_mode = 5

[node name="CardBorder" type="Panel" parent="MarginContainer/VBoxContainer/DemoArea/DemoPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -103.0
offset_right = 78.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/WrongMatchSection/WrongMatchButtons/ShakeRedFlash" to="." method="_on_shake_red_flash_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/WrongMatchSection/WrongMatchButtons/BounceBack" to="." method="_on_bounce_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/WrongMatchSection/WrongMatchButtons/WobbleDim" to="." method="_on_wobble_dim_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/WrongMatchSection/WrongMatchButtons/ElectricSpark" to="." method="_on_electric_spark_pressed"]
